--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,11 +15,11 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Conference Reports"
-    url: "/#-conference-reports"
+  - title: "Reports"
+    url: "/#-reports"
 
   - title: "Internships"
     url: "/#-internships"
 
   - title: "Social Services"
-    url: "/#-social services"
+    url: "/#-social-services"
