--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Xiangyu Dong's Homepage"
 description              : "Focusing on Embodied AI. "
-repository               : "XiangyuDong.github.io"
+repository               : "XiangyuDongAI.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
